--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PWA dengan Fitur Lokasi</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -39,7 +43,7 @@
       //     const locationElement = document.getElementById('location');
       //     const latitude = position.coords.latitude;
       //     const longitude = position.coords.longitude;
-      //     alert(`Lat: ${latitude}, Lon: ${longitude}`);
+      //     alert(`Lat: n${latitude}, Lon: ${longitude}`);
       //     locationElement.textContent = `Lat: ${latitude}, Lon: ${longitude}`;
       //   }, function (error) {
       //     alert('Gagal mendapatkan lokasi:', error.message);
