--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <style>
+    /* agar tidak auto refresh ketika di pull down */
     body {
       overflow: hidden;
     }
